--- a/src/main/webapp/styles/base.less
+++ b/src/main/webapp/styles/base.less
@@ -7,6 +7,8 @@ body {
 .header {
     align-items: center;
     display: flex;
+    gap: 10px;
+    max-width: 1000px;
 
     .title {
         flex: 1;
